--- a/vars/apache-24.yml
+++ b/vars/apache-24.yml
@@ -3,6 +3,10 @@ apache_vhosts_version: "2.4"
 apache_default_vhost_filename: 000-default.conf
 apache_ports_configuration_items:
   - {
-    regexp: "^Listen ",
+    regexp: "^Listen .*$",
     line: "Listen {{ apache_listen_port }}"
+  }
+  - {
+    regexp: "^\tListen .*$",
+    line: "\tListen {{ apache_listen_port_ssl }}"
   }
